--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -22,17 +22,17 @@ valve :
     name: DoT
     configuration :
         apikey: ${VALVE_API_KEY}
-        token.path: ${TOKEN_PATH:/token/jwt/v1/}
-        well.path: ${WELL_PATH:democore/well/v2/witsml/wells/}
-        well.gql.path: ${WELL_GQL_PATH:democore/well/v2/graphql/}
-        wellbore.path: ${WB_PATH:democore/wellbore/v1/witsml/wellbores/}
-        wellbore.gql.path: ${WB_GQL_PATH:democore/wellbore/v1/graphql/}
-        trajectory.path: ${TRAJ_PATH:democore/trajectoryreader/v1/witsml/trajectories/}
-        trajectory.gql.path: ${TRAJ_GQL_PATH:democore/trajectoryreader/v1/graphql/}
-        log.channelset.path: ${LOG_PATH:democore/channelreader/v4/witsml/channelSets}
-        log.channelset.metadata.path: ${LOG_CHANNELSET_METADATA:democore/channelreader/v4/witsml/channelSets/:uuid}
-        log.channelset.uuid.path: ${LOG_CHANNELSET_UUID:democore/channelreader/v4/identities}
-        log.channels.path: ${LOG_CHANNELS:democore/channelreader/v4/witsml/channels/metadata/}
+        token.path: ${TOKEN_PATH:https://api-demo.nam.drillops.slb.com/democore/BasicAuth/v1/token/}
+        well.path: ${WELL_PATH:https://api-demo.nam.drillops.slb.com/democore/well/v2/witsml/wells/}
+        well.gql.path: ${WELL_GQL_PATH:https://api-demo.nam.drillops.slb.com/democore/well/v2/graphql/}
+        wellbore.path: ${WB_PATH:https://api-demo.nam.drillops.slb.com/democore/wellbore/v1/witsml/wellbores/}
+        wellbore.gql.path: ${WB_GQL_PATH:https://api-demo.nam.drillops.slb.com/democore/wellbore/v1/graphql/}
+        trajectory.path: ${TRAJ_PATH:https://api-demo.nam.drillops.slb.com/democore/trajectoryreader/v1/witsml/trajectories/}
+        trajectory.gql.path: ${TRAJ_GQL_PATH:https://api-demo.nam.drillops.slb.com/democore/trajectoryreader/v1/graphql/}
+        log.channelset.path: ${LOG_PATH:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channelSets}
+        log.channelset.metadata.path: ${LOG_CHANNELSET_METADATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channelSets/:uuid}
+        log.channelset.uuid.path: ${LOG_CHANNELSET_UUID:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/identities}
+        log.channels.path: ${LOG_CHANNELS:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels/metadata/}
 wmls:
     version: 1.3.1.1,1.4.1.1
     compression: true
