--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -31,9 +31,10 @@ valve :
         trajectory.gql.path: ${TRAJ_GQL_PATH:https://api-demo.nam.drillops.slb.com/democore/trajectoryreader/v1/graphql/}
         log.channelset.path: ${LOG_PATH:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channelSets}
         log.channel.path: ${LOG_PATH:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels}
-        log.channelset.metadata.path: ${LOG_CHANNELSET_METADATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channelSets/:uuid}
+        log.channelset.metadata.path: ${LOG_CHANNELSET_METADATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channelSets}
         log.channelset.uuid.path: ${LOG_CHANNELSET_UUID:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/identities}
-        log.channels.path: ${LOG_CHANNELS:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels/metadata/}
+        log.channels.path: ${LOG_CHANNELS:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels/metadata}
+        log.channels.data.path: ${LOG_CHANNELS:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels/data}
 wmls:
     version: 1.3.1.1,1.4.1.1
     compression: true
