--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,7 @@
 FROM openjdk:11-jdk-slim
 
 RUN apt-get update \
+    && apt-get install ca-certificates \
     && apt-get install -y --no-install-recommends curl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
