--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,8 +16,8 @@
 
 FROM openjdk:11-jdk-slim
 
-RUN apt-get update \
-    && apt-get install ca-certificates \
+RUN apt-get install ca-certificates \
+    && apt-get update \
     && apt-get install -y --no-install-recommends curl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
