--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -37,7 +37,7 @@ valve :
         log.channels.data.path: ${LOG_CHANNELS:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels/data}
         log.mnemonic.data.path: ${LOG_MNEMONIC:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels/:mnemonic}
         log.channel.depthData.path: ${LOG_DEPTHDATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/channels/depthdata}
-        log.channel.timeData.path: ${LOG_DEPTHDATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/channels/timedata}
+        log.channel.timeData.path: ${LOG_TIMEDATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/channels/timedata}
 
 wmls:
     version: 1.3.1.1,1.4.1.1
