--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -38,6 +38,7 @@ valve :
         log.mnemonic.data.path: ${LOG_MNEMONIC:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channels/:mnemonic}
         log.channel.depthData.path: ${LOG_DEPTHDATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/channels/depthdata}
         log.channel.timeData.path: ${LOG_TIMEDATA:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/channels/timedata}
+        log.channelset.search: ${LOG_SEARCH:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/witsml/channelSets}
 
 wmls:
     version: 1.3.1.1,1.4.1.1
