--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - sudo apt-get install -y curl
   - wget -O ~/codacy-coverage-reporter-assembly-latest.jar https://s3.us-east-2.amazonaws.com/hm-witsml-server/codacy-coverage-reporter-4.0.3-assembly.jar
 install: 
-  - mvn clean install
-  - mvn jacoco:report
+  - mvn -q clean install
+  - mvn -q jacoco:report
 cache:
   directories:
   - "$HOME/.m2"
